# apache-spark

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
datasets/olympic-history/noc_regions/: part-00000-3aaf80e1-2fe3-4621-9f16-fd39637c571b-c000.snappy.parquet
elasticsearch/: docker-compose.yaml  spark-submit.sh  write-example.py
notebooks/: Spark Base.ipynb  basic operations.ipynb  dataframe and SQL.ipynb  dataframe basics.ipynb  machine learning.ipynb  read and write.ipynb  spark sql basics.ipynb  sql basics.ipynb  streaming.ipynb
spark-on-docker/: Dockerfile
spark-on-docker/bitnami/: Dockerfile  docker-compose.yaml  example.py  run.sh  spark-submit.sh
spark-on-docker/datamechanics/: README.md  docker-compose.yaml  example.py
spark-on-docker/kubernetes/: Dockerfile  README.md  example.py  run.sh
spark-on-docker/local/: Dockerfile  docker-compose.yaml  spark-submit.sh
spark-on-docker/spark-yarn/: Dockerfile  README.md  cp_jar.sh  docker-compose.yaml  spark-defaults.conf  spark-submit.sh
spark-on-docker/spark-yarn/apps/: CLI HDFS.ipynb  CLI minio.ipynb  Elasticsearch.ipynb  HDFS commands.ipynb  Notebook using spark with YARN.ipynb  Spark Base.ipynb  catalogs.ipynb  dataframe and SQL - basic operations.ipynb  dataframe and SQL.ipynb  delta lake - HDFS.ipynb  delta lake - minio.ipynb  delta lake.ipynb  elasticsearch.ipynb  example.py  iceberg - minio scd 2.ipynb  iceberg - minio.ipynb  icerberg - HDFS.ipynb  import custom jar - python.ipynb  import custom jar - scala.ipynb  machine learning - WIP.ipynb  s3.ipynb  (+12 more)
(+8 files in other folders)
