[tool.poetry]
name = "apache-spark"
version = "0.1.0"
description = ""
authors = ["José Nunes <josenunesra@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyspark = {extras = ["sql"], version = "^3.5.4"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^8.2.2"
flake8 = "^7.1.0"

[tool.mypy]
exclude = [
    ".venv"
]
cache_dir = "/tmp/.mypy_cache"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
